fixing dark mode colors

--- a/resources/css/partials/sidebar.css
+++ b/resources/css/partials/sidebar.css
@@ -1,6 +1,5 @@
 .sidebar {
-	@apply z-3 fixed inset-y-0 left-0 bg-white lg:top-header.height lg:!transform-none;
-  width: var(--sidebar-width);
+	@apply z-3 fixed inset-y-0 left-0 w-sidebar.width bg-white border-r border-gray-100 lg:top-header.height lg:!transform-none;
   transform: translateX(-110vw);
   transition: transform 0.6s cubic-bezier(0.16, 1, 0.3, 1), visibility 0s linear 0.6s;
 
